# Eframe

./: CMakeLists.txt  DEVELOPMENT_STATUS.md  ProductSpec.md  ProjectStructure.md  README.md  Updated project structure.md  partitions.csv  sdkconfig
components/Adafruit-GFX/: Adafruit_GFX.cpp  Adafruit_GFX.h  CMakeLists.txt  Print.h  Printable.h  WString.cpp  WString.h  gfxfont.h  glcdfont.c
components/arduino_esp32/: epd_gui.cpp
components/waveshare_epd/: CMakeLists.txt  epd.c  epd.cpp  epd.h  epd4spi.cpp  epd_driver.c  epd_driver.h  epd_highlevel.c  epd_highlevel.h  epdspi.cpp  font.h  font8.c
components/waveshare_epd/include/: epd.h  epdspi.h  gdew_colors.h
components/waveshare_epd/include/goodisplay/: gdey075T7.h
components/waveshare_epd/models/goodisplay/: gdey075T7.cpp
main/: CMakeLists.txt  app_mqtt.h  config_parser.c  config_parser.h  config_types.h  display_manager.c  display_manager.cpp  display_manager.h  display_manager.hpp  main.c  mqtt_client.c  mqtt_client.h  web_server.c  web_server.h  widget_data.h  wifi_provisioning.c  wifi_provisioning.h
www/: index.html
